# Aios

./: CMakeLists.txt  README.md
include/ai_os/: async_prefetcher.hpp  c_api.h  exceptions.hpp  platform.hpp  sliding_window_manager.hpp  sovereign_arena.hpp  ternary_math_engine.hpp
python/: Run_AIOS.bat  api_server.py  app.py  audit_env.py  debug.py  engine_bridge.py  gui_main.py  model_compiler.py  start.bat
src/: async_prefetcher.cpp  c_api.cpp  sliding_window_manager.cpp  sovereign_arena.cpp  ternary_math_engine.cpp
